fix: globalthis is not defined && feat: v1.0.3

--- a/examples/package.json
+++ b/examples/package.json
@@ -5,18 +5,9 @@
   "scripts": {
     "start": "node scripts/start.js"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    "since 2015"
+  ],
   "babel": {
     "plugins": [
       [
