--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,8 +10,6 @@ jobs:
 
     name: 'publish npm'
 
-    environment: npm
-
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -26,4 +24,4 @@ jobs:
       - name: Publish to the npm registry
         run: npm publish 
         env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
